# fast_api_curso

./: .coverage  .gitignore  LICENSE  README.md  database.db  pyproject.toml
migrations/: env.py
migrations/versions/: 2d66e8d7d4a1_create_users_table.py  4cfbcac8a268_exercicio_03_aula_04.py
src/fast_api_curso/: __init__.py  app.py  models.py  schemas.py  settings.py
tests/: __init__.py  conftest.py  test_app.py  teste_db.py
