[project]
name = 'fast-api-curso'
version = '0.1.0'
description = ''
authors = [
    {name = 'Your Name',email = 'you@example.com'}
]
readme = 'README.md'
requires-python = '>=3.12.10,<4.0'
dependencies = [
    'poetry-core (>=2.0.0,<3.0.0)',
    'fastapi (>=0.115.12,<0.116.0)',
    'sqlalchemy (>=2.0.41,<3.0.0)',
    "pydantic-settings (>=2.9.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = 'fast_api_curso', from = 'src'}]

[tool.poetry.group.dev.dependencies]
ruff = '^0.11.10'
pytest = '^8.3.5'
pytest-cov = '^6.1.1'
taskipy = '^1.14.1'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['E', 'F', 'I', 'N', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = ['.']
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev src/fast_api_curso/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src/fast_api_curso -vv'
post_test = 'coverage html'

[build-system]
requires = ['poetry-core>=2.0.0,<3.0.0']
build-backend = 'poetry.core.masonry.api'
